
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint16 ;
struct tconx_reply_header {int bytecount; } ;
struct smb_base_header {int tid; } ;
struct nbt_session_header {int dummy; } ;
typedef int packet ;


 int close (int) ;
 int errno ;
 int exit (int) ;
 int fprintf (int ,char*,char*,int) ;
 int memcpy (int*,int *,int) ;
 int printf (char*,int) ;
 int read (int,char*,int) ;
 int stderr ;
 char* strerror (int) ;
 int tid ;

void process_tconx_reply(int fd)
{ struct nbt_session_header *nbt_hdr;
 struct smb_base_header *base_hdr;
 struct tconx_reply_header *tx_hdr;
 char packet[1024];
 int size, bytecount;


 if ((size = read(fd, packet, sizeof (packet))) == -1)
 { close(fd);
 fprintf(stderr, "read() failed, reason: '%s' (code %i)\n",
strerror(errno), errno);
 exit(-errno);
 }

 nbt_hdr = (struct nbt_session_header *)packet;
 base_hdr = (struct smb_base_header *)(packet + sizeof (struct
nbt_session_header));
 tx_hdr = (struct tconx_reply_header *)(packet + sizeof (struct
nbt_session_header) + sizeof (struct smb_base_header));

 memcpy(&tid, &base_hdr->tid, sizeof (uint16));
 memcpy(&bytecount, &tx_hdr->bytecount, sizeof (uint16));

 printf("tree connect complete, got assigned tid %i\n", tid);
}
